      * Qex races should be much less laggy now
      * Fixed some outfits using the wrong store images
      * Fixed system viewer not being consistent with map
      * Player's escort damage is counted towards players damage
      * Avoid having missions duplicates for cases where they can significantly stack such as patrol missions

* 0.10.6
   * Fixed potential segfault with invalid semver strings
   * Fixed sign error when buying artifacts in the Baron Prince mission (sorry)
   * Fixed behaviour of naev.trigger with parameters
   * Fixed Lua spfx volume changing with game speed
   * Fixed memory leak in luaspfx trails
   * Fixed missions doing things in systems they should not
   * Fixed Adrenal Gland III's time speed up effect
   * Fixed Misi giving upgrades for free
   * Fixed minor planet check in frontier war missions
   * Fixed silent installs on windows
   * Fixed typos

* 0.10.5
   * Start counting effect stacks from 1 not 2
   * Fixed launcher weapons using outfit mass instead of ammo mass
   * taiomi: fixed claim check for last mission
   * Fixed some typos
   * Fixed equipment of Lancelot in "Sharkman Is Back" mission
   * Fixed clicking on jump points also selecting planets in some cases
   * nelly02: Nelly now stops recommending stuff that only does a little disable
   * shadowvigil: Fixed mission not spawning escorts
   * flf_patrol: Missions should no longer be able to have ridiculously low credit rewards
   * Fixed some events not claiming systems that could interfere with other missions
   * hypergate_construction: should actually claim the system
   * Fixed some formatting in the alt text when hovering over outfits in the equipment window
   * ec06: refuel tanker should provide as much fuel as possible
   * taiomi09: fixed smugglers becoming hostile in some cases
   * Changed music.stop() API to stop music from continuing by default
   * Fixed potential memory issues on some platforms